# AU.Drone

./: .gitignore  README.md
app/: routes.js
config/: database.js
drywall/: .gitignore  app.js  config.js  connectToDroneWifi.sh  findDroneESSID.sh  package.json  routes.js  start.sh
drywall/layouts/: account.jade
drywall/lib/: sockets.js  wc-stream.js
drywall/public/javascripts/: cardinal_controller.js  rotational_controller.js
drywall/public/stylesheets/: main.css
drywall/views/: index.jade
drywall/views/about/: index.jade
drywall/views/contact/: index.jade
lib/: sockets.js
public/javascripts/: cardinal_controller.js  rotational_controller.js
relay/: CommRelay  Makefile  comm_relay.cpp
relay/PiGithub/SeniorDesignSE/SeniorDesign/Pi/: CMakeLists.txt
relay/PiGithub/SeniorDesignSE/SeniorDesign/Pi/include/: ConstantsAndHeaders.h  NavData.h  Navigation.h  Pi.h  UDP.h  XBee.h  XBee.h~  xbeepacket.h
relay/PiGithub/SeniorDesignSE/SeniorDesign/Pi/include/mavlink/common/: mavlink_msg_ack.h  mavlink_msg_cmdmsg.h  mavlink_msg_vidstream.h  version.h
relay/PiGithub/SeniorDesignSE/SeniorDesign/Pi/src/: NavData.cpp  Navigation.cpp  Pi.cpp  UDP.cpp  XBee.cpp  gcscontroller.cpp  main.cpp  xbeepacket.cpp
relay/legacy/: ConstantsAndHeaders.h  xbee.cpp  xbee.h  xbeepacket.cpp  xbeepacket.h
views/: drone.ejs
web/: LICENSE  README.md  package.json  server.js
web/app/: routes.js
web/config/: database.js  passport.js
web/lib/: sockets.js
web/views/: administrate.ejs  change_password.ejs  drone.ejs  index.ejs  login.ejs  profile.ejs  signup.ejs
(+16 files in other folders)
